# ProofAnalyzeHseProj

./: .env.example  Dockerfile  README-DB.md  README.md  docker-compose.yml  docker-entrypoint.sh  makefile  pyproject.toml
app/: config.py  main.py
app/api/: deps.py  routes.py  schemas.py
app/core/agents/: critic_agent.py  formulator_agent.py
app/core/clients/db/knowledge_base/: euclidean_geometry.json  oeis_facts.json  theoremqa.json
app/core/clients/db/rag/: __init__.py  build.py  config.py  embedder.py  loader.py  vector_store.py
app/core/clients/db/scripts/: clean_oeis_facts.py  download_oeis.py  download_theoremqa.py  download_wikipedia_math_facts.py  download_wikipedia_math_facts_html.py  test_rag_queries.py
app/core/clients/llm/: __init__.py  base.py  llm_client.py  ollama_client.py
app/core/containers/: __init__.py  container.py  context.py
app/core/service/: __init__.py  proof_service.py  service.py  verification_pipeline.py
app/core/utils/: __init__.py  proof_utils.py
app/services/: __init__.py  jobs.py  proof_application.py
app/static/: index.html
proofsanalyze.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
